--- a/settings.json
+++ b/settings.json
@@ -1,56 +1,69 @@
-{
-    "role_admin": {
+[
+    {
+        "id": "role_admin",
         "type": "number",
         "default": 1,
         "size": 6
     },
-    "role_guest": {
+    {
+        "id": "role_guest",
         "type": "number",
         "default": 2,
         "size": 6
     },
-    "enable_comments": {
+    {
+        "id": "enable_comments",
         "type": "toggle",
         "default": 1
     },
-    "use_captcha": {
+    {
+        "id": "use_captcha",
         "type": "toggle",
         "default": 0
     },
-    "min_score_auto_publish": {
+    {
+        "id": "min_score_auto_publish",
         "type": "number",
         "dataType": "float",
         "default": 0.5
     },
-    "toast_life": {
+    {
+        "id": "toast_life",
         "type": "number",
         "default": 5000
     },
-    "per_load": {
+    {
+        "id": "per_load",
         "type": "number",
         "default": 10
     },
-    "teaser_mode": {
+    {
+        "id": "teaser_mode",
         "type": "toggle",
         "default": 1
     },
-    "auto_entry_url": {
+    {
+        "id": "auto_entry_url",
         "type": "toggle",
         "default": 1
     },
-    "further_reading_min_tags": {
+    {
+        "id": "further_reading_min_tags",
         "type": "number",
         "default": 1
     },
-    "further_reading_max": {
+    {
+        "id": "further_reading_max",
         "type": "number",
         "default": 1
     },
-    "show_sidebar": {
+    {
+        "id": "show_sidebar",
         "type": "toggle",
         "default": 1
     },
-    "github_feed": {
+    {
+        "id": "github_feed",
         "type": "text"
     }
-}
+]
