--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "blog-spec",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "\"Data model contract between blog-server and blog-client\"",
   "main": "index.js",
-  "scripts": {
-
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SikoSoft/blog-spec.git"
