--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blog-spec",
-  "version": "2.3.1",
+  "version": "2.4.0",
   "description": "\"Data model contract between blog-server and blog-client\"",
   "main": "index.js",
   "scripts": {},
@@ -16,5 +16,6 @@
   "bugs": {
     "url": "https://github.com/SikoSoft/blog-spec/issues"
   },
-  "homepage": "https://github.com/SikoSoft/blog-spec#readme"
+  "homepage": "https://github.com/SikoSoft/blog-spec#readme",
+  "types": "blog-spec.d.ts"
 }
