--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "blog-spec",
-  "version": "2.4.2",
+  "displayName": "Untitled Blog Project",
+  "version": "2.4.3",
   "description": "\"Data model contract between blog-server and blog-client\"",
   "main": "index.js",
   "scripts": {},
