--- a/settings.json
+++ b/settings.json
@@ -95,5 +95,13 @@
     "listSource": "banners",
     "default": 1,
     "size": 6
+  },
+  {
+    "id": "theme",
+    "type": "list",
+    "dataType": "varchar",
+    "size": 64,
+    "listSource": "themes",
+    "default": "default"
   }
 ]
